// file: proto/gcommon/v2/common/authenticate_request.proto
// version: 1.0.1
// guid: 3662d31f-ad12-4066-be86-6a74f4e4a884
edition = "2023";

package common.v2;

import "common/v2/api_key_credentials.proto";
import "common/v2/client_info.proto";
import "common/v2/jwt_credentials.proto";
import "common/v2/o_auth2_credentials.proto";
import "common/v2/password_credentials.proto";
import "common/v2/request_metadata.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/commonpb/v2";

/**
 * Authentication request supporting multiple credential types.
 * Uses oneof to ensure only one authentication method is provided per request.
 * Supports comprehensive metadata and client information for security and auditing.
 */
message AuthAuthenticateRequest {
  // Request metadata for tracing, correlation, and auditing
  common.v2.RequestMetadata metadata = 1 [lazy = true];

  // Authentication credentials (oneof ensures only one type is used)
  oneof credentials {
    // Username/password authentication
    PasswordCredentials password = 2;
    // API key authentication
    APIKeyCredentials api_key = 3;
    // OAuth2 authorization code flow
    OAuth2Credentials oauth2 = 4;
    // JWT bearer token authentication
    JWTCredentials jwt = 5;
  }

  // Requested authorization scopes
  repeated string scopes = 6;

  // Client information for security and session management
  common.v2.ClientInfo client_info = 7 [lazy = true];
}
