// file: pkg/config/proto/set_multiple_config_request.proto
edition = "2023";

package gcommon.v1.config;

import "pkg/common/proto/config_value.proto";
import "pkg/common/proto/request_metadata.proto";
option go_package = "github.com/jdfalk/gcommon/pkg/config/proto";

/**
 * SetMultipleConfigRequest stores multiple configuration values.
 */
message SetMultipleConfigRequest {
  // Configuration entries to set
  map<string, gcommon.v1.common.ConfigValue> entries = 1;

  // Optional namespace/environment
  string namespace = 2;

  // Common metadata for all entries
  map<string, string> metadata = 3;

  // Whether to encrypt values
  bool encrypt = 4;

  // Request metadata
  gcommon.v1.common.RequestMetadata request_metadata = 5;
}
