// file: proto/gcommon/v1/config/messages/get_config_request.proto
// version: 1.0.0
// guid: 86fbcecd-9557-4fc3-ab87-80bcc888d2bc
edition = "2023";

package gcommon.v1.config.messages.get_config_request;

import "google/protobuf/go_features.proto";
import "gcommon/v1/common/messages/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/proto/proto/gcommon/v1/config/messages/get_config_request";

/**
 * GetConfigRequest retrieves a single configuration value.
 */
message GetConfigRequest {
  // Configuration key
  string key = 1;

  // Optional namespace/environment
  string namespace = 2;

  // Request metadata
  gcommon.v1.common.RequestMetadata metadata = 3;

  // Whether to decrypt encrypted values
  bool decrypt = 4;
}
